# daswag-backend

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  Makefile  deny.toml
.github/workflows/: auto-approve.yml  build.yml  ci.yml  contributors.yml  deny.yml  pull-request-lint.yml
backend-authentication/: Cargo.toml  cdk.json  package-lock.json
backend-authentication/cdk/: .eslintrc.json  package.json  tsconfig.json
backend-authentication/lib/: stage.ts
scripts/: cargo-ci.sh  cdk-ci.sh
